ask a question function

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -258,3 +258,13 @@ html, body{
 		width: 95%;
 	}
 }
+
+
+#question-list {
+  display: flex;
+  flex-direction: column;
+}
+
+.question-item {
+  margin-bottom: 20px;
+}
