--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -20,6 +20,10 @@
   background: linear-gradient(to right, rgba(132, 250, 176, 1), rgba(143, 211, 244, 1))
 }
 
+main{
+  min-height: 100vh;
+}
+
 :root{
   background: #B2D8D8;
 }
