--- a/frontend/src/designs/Questionbox.css
+++ b/frontend/src/designs/Questionbox.css
@@ -11,6 +11,7 @@
   border-top-right-radius: 1rem;
   border-bottom-left-radius: 1rem;
   border-bottom-right-radius: 1rem;
+  margin-top: 5rem;
 	margin-bottom: 3.125rem;
 
   -webkit-box-shadow: -1px 6px 50px -5px rgba(0,0,0,0.75);
@@ -44,4 +45,8 @@
 	background-color: black;
 	border: none;
   margin-left: 20.5rem;
+  border-top-left-radius: 2rem;
+  border-top-right-radius: 2rem;
+  border-bottom-left-radius: 2rem;
+  border-bottom-right-radius: 2rem;
 }
