Header for user fix

--- a/frontend/src/designs/LoginScreen.css
+++ b/frontend/src/designs/LoginScreen.css
@@ -85,15 +85,26 @@
 }
 
 #loginbutton{
-  color: black;
-  font-weight: bold;
-  border-radius: 2rem;
-  background-color: #B2D8D8;
+  color: black !important;
+  font-weight: bold !important;
+  border-radius: 2rem !important;
+  background-color: #B2D8D8 !important;
+  height: 3rem !important;
+  width: 100% !important;
 }
 
 #loginbutton:hover{
-  color: white;
-  background-color: black;
+  color: white !important;
+  background-color: black !important;
+  height: 3rem !important;
+  width: 100% !important;
+}
+
+#loginbutton:active{
+  color: white !important;
+  background-color: black !important;
+  height: 3rem !important;
+  width: 100% !important;
 }
 
 #loginslogan{ 
