Sub | Topup | Join Now screen fix

--- a/frontend/src/designs/Questionbox.css
+++ b/frontend/src/designs/Questionbox.css
@@ -1,4 +1,4 @@
-.question-container {
+/* .question-container {
 	display: block;
 	width: 43.75rem;
   height: 35.625rem;
@@ -48,4 +48,4 @@
   border-top-right-radius: 2rem;
   border-bottom-left-radius: 2rem;
   border-bottom-right-radius: 2rem;
-}
+} */
