--- a/frontend/src/designs/Footer.css
+++ b/frontend/src/designs/Footer.css
@@ -1,15 +1,23 @@
 #footer-text{
-    padding-left: 25rem;
-  }
+  padding-left: 25rem;
+}
 
 #footerbg{
-  background-color: white;
+background-color: white;
+/* position: fixed; */
+/* left: 0;
+bottom: 0;
+width: 100%;
+background-color: #333; /* Adjust as needed */
+/* color: white; /* Adjust as needed */
+/* text-align: center; */ 
+/* padding: 10px 0; Adjust padding as needed */ 
 }
 
 .footer-container {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
+position: fixed;
+bottom: 0;
+left: 0;
+width: 100%;
 
 }
