admin question error fix

--- a/frontend/src/designs/Subscreen.css
+++ b/frontend/src/designs/Subscreen.css
@@ -279,6 +279,6 @@
 }
 
 #subtext2 {
-    font-size: 0.8em; /* Adjust size if needed */
-    color: gray; /* Color of the subtext */
+    font-size: 0.8em; 
+    color: gray; 
 }
