--- a/frontend/src/designs/Footer.css
+++ b/frontend/src/designs/Footer.css
@@ -4,20 +4,11 @@
 
 #footerbg{
   background-color: white;
-  /* position: fixed; */
-  /* left: 0;
-  bottom: 0;
-  width: 100%;
-  background-color: #333; /* Adjust as needed */
-  /* color: white; /* Adjust as needed */
-  /* text-align: center; */ 
-  /* padding: 10px 0; Adjust padding as needed */ 
-}
-
-.footer-container {
-  position: fixed;
-  bottom: 0;
+  /* position: fixed;
   left: 0;
+  bottom: 0;
   width: 100%;
-
+  color: #ccc; 
+  text-align: center;
+  padding: 0px 0; */
 }
