frontend fix for some errors + question detail

--- a/frontend/src/designs/Navbaruser.css
+++ b/frontend/src/designs/Navbaruser.css
@@ -130,6 +130,7 @@
     font-weight: 900 bolder;
     font-family: "Lato", sans-serif;
     font-weight: 900;
+    object-fit: cover;
 }
 
 #dropdownimage:hover{
