--- a/frontend/src/designs/QuestionDetail.css
+++ b/frontend/src/designs/QuestionDetail.css
@@ -1,3 +1,10 @@
+#questiondetailbg{
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+    background-color: #B2D8D8;
+    max-height: fit-content;
+}
+
 #questiondetail-container{
     width: 60rem;
     height: 10rem, fit-content;
@@ -5,19 +12,12 @@
     padding-top: 2.5rem;
     padding-bottom: 2.5rem;
     padding-right: 2.5rem;
-    background: white;
-    margin-left: 20rem;
-    border-style: solid;
-    border-color: black;
-    border-top-left-radius: 1rem;
-    border-top-right-radius: 1rem;
-    border-bottom-left-radius: 1rem;
-    border-bottom-right-radius: 1rem;
-}
-
-#questiondetailbg{
-    padding-top: 2rem;
-    background-color: #B2D8D8;
+    background: rgba(255, 255, 255, 0.575);
+    margin-left: 25.5rem;
+    margin-bottom: 5rem;
+    border: none;
+    border-radius: 3rem;
+    transition: 0.2 ease-in-out;
 }
 
 .detailline{
@@ -34,33 +34,38 @@
     margin-bottom: 0.625rem;
     margin-right: 10px;
     float: left;
+    object-fit: cover;
   }
 
-#questiondetail-content{
+/* #questiondetail-content{
     margin-top: 2rem;
     margin-bottom: 2rem;
-}
+} */
 
-#questiondetail-info{
+/* #questiondetail-info{
     margin-right: 3rem;
-}
+} */
 
 #answer-area{
     width: 50rem;
     height:3rem;
     margin-top: 1.5rem;
-    margin-left: 1.5rem;
+    margin-left: 1.8rem;
     padding-left: 1rem;
     border: 2px solid #ECECEC;
     background-color: #FAFAFA;
-    border-top-left-radius: 1rem;
-    border-top-right-radius: 1rem;
-    border-bottom-left-radius: 1rem;
-    border-bottom-right-radius: 1rem;
+    border-radius: 3rem;
+    font-family: "Lato", sans-serif;
+    font-weight: 900;
+}
+
+#answer-area:hover{
+    border-color: #B2D8D8;
 }
 
 #answer-area:focus{
     border-color: #B2D8D8;
+    background-color: aliceblue;
     outline: none;
 }
 
@@ -69,3 +74,149 @@
     max-width: 100%;
     max-height: 100%;
 }
+
+.profile-picture-container {
+    display: flex;
+    align-items: center;
+}
+
+.profile-info {
+    margin-left: 3px;
+    margin-bottom: 10px;
+    text-decoration: solid !important;
+}
+
+#posted-by,
+#created-at {
+    margin: 0;
+    text-decoration: solid !important;
+}
+
+#posted-by{
+    font-family: "Lato", sans-serif;
+    font-weight: 900;
+    font-size: 1.3rem !important;
+    color: black;
+    text-decoration: solid !important;
+}
+
+#created-at{
+    font-family: "Lato", sans-serif;
+    font-weight: 900;
+    font-size: .8rem !important;
+    text-decoration: solid !important;
+    color: gray;
+}
+
+#detaillink{
+    text-decoration: solid;
+}
+
+#detaillink:hover{
+    text-decoration: underline;
+}
+
+.answer-area-form {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.3s ease-out;
+}
+
+.answer-area-form.show {
+    max-height: 100px; /* Adjust the value based on your content height */
+}
+
+#toggleanswer{
+    width: 20rem;
+    height: 3rem;
+    border-radius: 3rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    border: none;
+    background-color: #B2D8D8;
+    transition: 0.2 ease-in-out;
+    font-family: "Lato", sans-serif;
+    font-weight: 900;
+}
+
+#toggleanswer:hover{
+    background-color: black;
+    color: white;
+    transition: 0.2 ease-in-out;
+}
+
+#submitanswerbtn{
+    width: 5rem;
+    height: 3rem;
+    margin-bottom: 5rem;
+    border: none;
+    border-radius: 3rem;
+    background-color: #b2d8d800;
+    position: absolute;
+    margin-top: 1.5rem;
+    margin-left: -4.5rem;
+}
+
+#submitanswericon{
+    width: 2rem;
+    height: 2rem;
+    padding: 3px;
+}
+
+#submitanswericon:hover{
+    color: #B2D8D8;
+}
+
+#questiontext{
+    color: black;
+}
+
+#deletebtn{
+    width: 5rem;
+    height: 5rem;
+    margin-bottom: 5rem;
+    border: none;
+    border-radius: 3rem;
+    background-color: #b2d8d800;
+    position: absolute;
+    top: 6.8rem;
+    left: 79rem;
+}
+
+#deletebtn:hover{
+    color: red;
+}
+
+#deleteicon{
+    width: 2rem;
+    height: 2rem;
+    padding: 2px;
+}
+
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .modal-content {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+  }
+  
+  .modal img {
+    max-width: 100%;
+    max-height: 80vh; /* Adjust as needed */
+  }
+  
+  .modal button {
+    margin-top: 10px;
+  }
+  
