--- a/frontend/src/designs/QuestionDetail.css
+++ b/frontend/src/designs/QuestionDetail.css
@@ -73,6 +73,7 @@
     overflow: auto;
     max-width: 100%;
     max-height: 100%;
+    align-items: center;
 }
 
 .profile-picture-container {
@@ -219,4 +220,11 @@
   .modal button {
     margin-top: 10px;
   }
-  
+
+#questiondetailcomment{
+    font-family: "Lato", sans-serif;
+    font-weight: 900;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    color: black;
+}
