--- a/frontend/src/designs/Adminuser.css
+++ b/frontend/src/designs/Adminuser.css
@@ -24,11 +24,13 @@
     font-family: "Lato", sans-serif;
     font-weight: 900;
     border: none;
+    transition: all 0.2s ease-in-out;
 }
 
 #adduserbtn:hover{
     background-color: white;
     color: black;
+    transition: all 0.2s ease-in-out;
 }
 
 .user-container {
@@ -38,13 +40,13 @@
     margin-bottom: 1rem;
     margin-top: 1rem;
     margin-right: 2rem;
-    transition: 0.2 ease-in-out !important;
+    transition: all 0.2s ease-in-out;
 }
 
 .user-container:hover {
     background-color: white;
     transform: scale(1.02) !important;
-    transition: 0.2 ease-in-out !important;
+    transition: all 0.2s ease-in-out;
     -webkit-box-shadow: 0px 0px 22px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 0px 22px 0px rgba(0,0,0,0.75);
     box-shadow: 0px 0px 22px 0px rgba(0,0,0,0.75);
@@ -75,9 +77,11 @@
     border: none;
     border-radius: 1rem;
     cursor: pointer;
+    transition: all 0.2s ease-in-out;
 }
 
 .user-actions button:hover {
     background-color: #B2D8D8;
     color: black;
+    transition: all 0.2s ease-in-out;
 }
