--- a/frontend/src/designs/Profile.css
+++ b/frontend/src/designs/Profile.css
@@ -35,6 +35,7 @@
     margin-bottom: 0.625rem;
     margin-left: 51rem;
     object-fit: cover;
+    transition: all 0.2s ease-in-out;
 }
 
 .profile-picture:hover { /*pfp size*/
@@ -45,6 +46,7 @@
   border-color: black;
   margin-bottom: 0.625rem;
   margin-left: 51rem;
+  transition: all 0.2s ease-in-out;
 }
 
 .visit-profile-picture { /*pfp size*/
@@ -201,10 +203,12 @@
   height: 1.5rem;
   border-radius: 2rem;
   color: #B2D8D8;
+  transition: all 0.2s ease-in-out;
 }
 
 #editbiobtn:hover{
   color: black;
+  transition: all 0.2s ease-in-out;
 }
 
 .profile-options{
