--- a/frontend/src/designs/Profile.css
+++ b/frontend/src/designs/Profile.css
@@ -167,6 +167,7 @@
   margin-left: 2rem;
   max-width: fit-content;
   overflow-wrap: break-word;
+  color: black;
 }
 
 #profile-question-item::before {
